# agentic-os

./: .env  README.md  outline.txt  test_mesh.py
.github/workflows/: build-deploy.yml
agents/: researcher.md  strategist.md
infra/: docker-compose.yml  nginx.conf
infra/mongo-init/: init-indexes.js
services/agent-research/: Dockerfile  requirements.txt
services/agent-research/app/: main.py  search.py
services/agent-strategist/: Dockerfile  requirements.txt
services/agent-strategist/app/: analysis.py  main.py
services/gateway/: Dockerfile  requirements.txt
services/gateway/app/: auth.py  main.py
services/orchestrator/: Dockerfile  requirements.txt
services/orchestrator/app/: factory.py  graph.py  loader.py  main.py
shared/: pyproject.toml
shared/shared/models/: state.py
shared/shared/utils/: cache.py  logger.py
