[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "2025.12.0"
description = "Internal Shared Logic for AI Superjack Agentic OS"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Stefanos Cunning", email = "business@aisuperjack.com" }
]
dependencies = [
    "pydantic",
    "motor",           # Async MongoDB driver
    "numpy",           # For vector similarity math in the cache
    "structlog",       # Structured logging for 2025
    "openai"           # For embeddings in the semantic cache
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy"
]